Doubled ghost button size to prevent overlaps

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,7 +106,7 @@ p.desc {
 }
 
 .contact_ghost_button {
-  width: 200px;
+  width: 400px;
   padding: 8px;
   color: #fff;
   border: 1px solid #fff;
